# xlg-player

./: .gitignore  README.md  justfile  pyproject.toml
docs/plans/: 2026-02-18-menu-bar-controls-design.md  2026-02-18-menu-bar-controls.md
streamdeck-plugin/: package.json  tsconfig.json
streamdeck-plugin/com.xlg.player.sdPlugin/: manifest.json
streamdeck-plugin/src/: plugin.ts
swift-player/: Info.plist  Package.swift
swift-player/Sources/xlg-player/: main.swift
xlg_player/: __init__.py  __main__.py  auth.html  auth.py  config.py  main.py  player.py
